tests/ui/type-item.stderr
error: expected `struct` or `enum`
 --> $DIR/type-item.rs:2:9
  |
2 |     pub type Number = u64;
  |         ^^^^
