tests/ui/type-item.rs
polygraph::schema!{
    pub type Number = u64;
}

fn main() {
}
